data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_186.wast
;; 7. **Mismatched Labels in Loop Contexts**:    - **Description**: Test mismatching label types within loops where `br` instructions refer to incorrect targets due to improper label type insertion into the context.    - **Constraint**: Ensuring label types are correctly inserted and matched within the extended context for loop blocks.

(assert_invalid
  (module
    (func $mismatched-labels-loop-contexts
      (block (loop (result i32)
        (i32.const 42)
        (loop (result i64)
          (br 1)
        )
      ))
    )
  )
  "type mismatch"
)